src/component/loading_list/snapshots/envision__component__loading_list__snapshot_tests__snapshot_with_selected.snap
---
source: src/component/loading_list/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────────────────────────┐
│    Build project                               │
│▸   Run tests                                   │
│    Deploy                                      │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
